--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+### Javascript and node ###
+/node_modules
+.env
+
 
 ### STS ###
 .apt_generated
